# postcar

./: README.md  pyproject.toml
.github/workflows/: checks.yml  release.yml  test.yml
src/postcar/: __about__.py  __init__.py  __main__.py  _types.py  config.py  errors.py
src/postcar/cli/: __init__.py  _config.py  _parser.py  _types.py  make.py  migrate.py
src/postcar/config/: __init__.py  common.py  database.py  defaults.py
src/postcar/db/: __init__.py  connections.py  lookups.py  migrations.py  queries.py
src/postcar/db/migrations/: __init__.py  classes.py  operations.py  versions.py
src/postcar/templates/: __init__.py  migration.py
src/postcar/utils/: __init__.py  fs.py  names.py
tests/: conftest.py
tests/db/: conftest.py  test_lookups.py  test_migrations.py
tests/example/invalid/: 0001_init.py
tests/example/migrations/: 0001_init.py
tests/utils/: test_fs.py  test_names.py
