[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "postcar"
dynamic = ["version"]
description = 'A database migration utility for Postgres'
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [{ name = "tunnelworks", email = "git@tunnelworks.org" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["psycopg>=3"]


[project.urls]
Documentation = "https://github.com/tunnelworks/postcar#readme"
Issues = "https://github.com/tunnelworks/postcar/issues"
Source = "https://github.com/tunnelworks/postcar"


[tool.hatch.version]
path = "src/postcar/__about__.py"


[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0", "pytest"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/postcar tests}"


[tool.coverage.run]
source_pkgs = ["postcar", "tests"]
branch = true
parallel = true
omit = ["src/postcar/__about__.py"]

[tool.coverage.paths]
postcar = ["src/postcar", "*/postcar/src/postcar"]
tests = ["tests", "*/postcar/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
